Fix: Fixed header visibility issue when opening/closing popup in design

--- a/styles/design.scss
+++ b/styles/design.scss
@@ -83,8 +83,6 @@
     width: 400px;
     height: 100vh;
 
-    margin-top: 7rem;
-
     .detail_img {
       width: 100%;
     }
