--- a/styles/header.scss
+++ b/styles/header.scss
@@ -6,8 +6,8 @@ header {
   top: 0;
   left: 0;
   padding: 0 10%;
-  background-color: yellow;
-
+  transform: translateY(0%);
+  transition: transform 0.5s ease;
   .header-inner {
     width: 100%;
     height: 100%;
@@ -60,4 +60,7 @@ header {
   //   }
   // }
 }
-// transform: translateZ(0);
+
+header.hide {
+  transform: translateY(-100%);
+}
